# ns-service

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-17-notification-service.md
docs/superpowers/specs/: 2026-06-17-notification-service-design.md
migrations/: env.py
migrations/versions/: 0001_create_notifications.py
src/notification_service/: __init__.py  config.py  db.py  domain.py  providers.py  repository.py  service.py  templating.py
src/notification_service/api/: app.py  dependencies.py  schemas.py
templates/sms/: appointment_reminder.yaml
tests/integration/: conftest.py  test_db.py  test_health.py  test_notifications_api.py  test_repository.py
tests/unit/: test_config.py  test_domain.py  test_providers.py  test_service.py  test_templating.py
