[project]
name = "notification-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sam G.", email = "samusagray@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.137.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
notification-service = "notification_service:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--cov=notification_service --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/Query()/etc. are designed to be called in argument defaults.
extend-immutable-calls = ["fastapi.Depends"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.50",
]
